# Eagle2Label

./: CMakeLists.txt  Unbenanntes Diagramm.drawio  alltheheaders.h  alltheheaders.hpp  data.cpp  data.h  data.hpp  filehandler.cpp  filehandler.h  filehandler.hpp  filereader.cpp  filereader.h  label.xml  main.cpp  parts.cpp  parts.h  parts.hpp  parts_structs.drawio  test.brd
files/: PNH-testCT3 CT4 CT2 CT1 CT16 CT7 CT8 CT9 CT10 CT11 CT12 CT13 CT14 CT5 CT6 .lbx  prop.xml  test.brd
